# tenchi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/scripts/: mcp_smoke.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  SHELL_PARITY.md  biome.json  docs-smoke.test.ts  events.md  execution.md  index.html  mdx-components.tsx  next.config.ts  package.json  providers.md  read-replicas.md  styles.css  tsconfig.json
docs/app/: globals.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
docs/app/[[...slug]]/: page.tsx
docs/components/: callout.tsx  copy-button.tsx  footer.tsx  logo-mark.tsx  nav.tsx  prev-next.tsx  search.tsx  theme-toggle.tsx  toc.tsx  use-theme.ts
docs/content/: agents.mdx  application.mdx  architecture.mdx  authentication.mdx  cli.mdx  client.mdx  comparisons.mdx  concepts.mdx  contracts.mdx  deployment.mdx  errors.mdx  execution.mdx  existing-project.mdx  getting-started.mdx  index.mdx  mcp.mdx  openapi.mdx  pagination.mdx  reference.mdx  responses.mdx  server.mdx  stability.mdx  testing.mdx
docs/lib/: base-path.ts  content.ts  docs.ts  search.test.ts  search.ts  seo.ts  syntax-theme.test.ts  syntax-theme.ts
docs/scripts/: build-llms-txt.ts  build-search-index.ts
docs_site/: build.py  style.css
examples/taskboard/: README.md  openapi.json  pyproject.toml
examples/taskboard/app/features/projects/: contracts.py  policy.py  ports.py  routes.py  schemas.py
examples/taskboard/app/features/projects/tests/: test_add_project_member.py  test_create_project.py  test_get_project.py  test_list_projects.py  test_notify_member_added.py
examples/taskboard/app/features/projects/use_cases/: add_project_member.py  create_project.py  get_project.py  list_projects.py  notify_member_added.py
examples/taskboard/app/features/tasks/: contracts.py  ports.py  routes.py  schemas.py
examples/taskboard/app/features/tasks/tests/: test_create_task.py  test_list_tasks.py  test_update_task.py
examples/taskboard/app/features/tasks/use_cases/: create_task.py  get_task.py  list_tasks.py  update_task.py
examples/taskboard/app/infra/: memory_repositories.py  port_wiring.py  sqlite_repositories.py  static_token_directory.py
examples/taskboard/app/server/: asgi.py  context.py  hooks.py  routes.py  worker.py
examples/taskboard/app/shared/: errors.py  users.py
examples/taskboard/tests/: test_app_map.py  test_architecture.py  test_outbox.py  test_sqlite_repositories.py  test_task_idempotency.py  test_taskboard_http.py  test_taskboard_openapi.py  test_transactions.py
examples/todos/: .mcp.json  README.md  openapi.json
examples/todos/app/infra/: memory_todo_repository.py  port_wiring.py  sqlite_todo_repository.py
examples/todos/app/server/: app.py  asgi.py  context.py  (+2 more)
examples/todos/tests/: test_sqlite_todo_repository.py  test_todos_auth.py  test_todos_client.py  test_todos_http.py  test_todos_lifespan.py  test_todos_openapi.py
src/tenchi/: __init__.py  _app_map.py  _checks.py  _cli_operations.py  _cli_results.py  _mcp_server.py  _media_types.py  _openapi_operations.py  _schema_compatibility.py  cli.py  client.py  compatibility.py  contracts.py  doctor.py  errors.py  execution.py  health.py  openapi.py  pagination.py  responses.py  routes.py  scaffold.py  server.py  snapshots.py  testing.py
tests/: api_snapshot.txt  app_map_snapshot.json  test_api_snapshot.py  test_app_map.py  test_checks.py  test_cli.py  test_cli_operations.py  test_client.py  test_compatibility.py  test_contracts.py  test_deadlines.py  test_docs.py  test_docs_site.py  test_doctor.py  test_error_taxonomy.py  test_errors.py  test_execution.py  test_hardening.py  test_health.py  test_hooks.py  test_lifespan.py  test_mcp.py  test_middleware.py  test_observers.py  test_openapi.py  test_pagination.py  test_request_ids.py  test_request_scope.py  test_responses.py  test_routes.py  test_server.py  test_successes.py  test_testing.py
(+11 files in other folders)
