[project]
name = "tenchi"
version = "0.1.0"
description = "A contract-first, Python-native framework for building REST APIs around use cases, ports, and explicit wiring."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "starlette>=0.37",
    "typing-extensions>=4.10",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "uvicorn>=0.30",
]

[project.scripts]
tenchi = "tenchi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenchi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "examples/todos"]
pythonpath = ["examples/todos"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "examples/todos"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests", "examples"]
extraPaths = ["examples/todos"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
