[project]
name = "tenchi"
version = "0.7.0"
description = "A contract-first, Python-native framework for building REST APIs around use cases, ports, and explicit wiring."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["asgi", "framework", "contracts", "rest", "api", "pydantic", "starlette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "starlette>=0.37",
    "typing-extensions>=4.10",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "openapi-spec-validator>=0.7",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/taylorbryant/tenchi"
Repository = "https://github.com/taylorbryant/tenchi"
Issues = "https://github.com/taylorbryant/tenchi/issues"
Changelog = "https://github.com/taylorbryant/tenchi/blob/main/CHANGELOG.md"

[project.scripts]
tenchi = "tenchi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenchi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "examples/todos"]
pythonpath = ["examples/todos"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "examples/todos", "examples/taskboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
# The taskboard example is a standalone project (its own `app` package
# would collide with the todos example); it is checked by its own pyright
# run in CI.
include = ["src", "tests", "examples/todos"]
extraPaths = ["examples/todos"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
