[project]
name = "taskboard"
version = "0.1.0"
description = "Tenchi stress-test application: projects and tasks with auth."
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "tenchi",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "openapi-spec-validator>=0.7",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "uvicorn>=0.30",
]

[tool.uv]
package = false

[tool.uv.sources]
tenchi = { path = "../..", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]
pythonpath = ["."]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
